syntax = "proto3";

package esobot;

message LogEvent {
  uint64 time_us = 1;
  string prefix = 2;
  string command = 3;
  repeated string args = 4;
}
